--- a/Admin/package.json
+++ b/Admin/package.json
@@ -2,7 +2,7 @@
   "name": "admin",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "lc-c <908810345@qq.com>",
+  "author": "cc",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "iview": "^2.11.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
